# cpp-snippets

./: CMakeLists.txt  LICENSE.txt  README.md
cli/: CMakeLists.txt  simple_cli.cpp
cmake/: FindCxxSupport.cmake  cxx_config.h.cmakein
filesystem/: CMakeLists.txt  filesystem_wrapper.h  ls.cpp  pwd.cpp
raii/: CMakeLists.txt  flag.cpp  scoped_trace.cpp  scoped_trace.h  scoped_value.h
winshell/: CMakeLists.txt  desktop.cpp
